--- a/index.html
+++ b/index.html
@@ -28,21 +28,19 @@
         <div class="col-sm-4">
         </div>
         <div class="col-sm-8">
-          <h2>Demo customer selector steps</h2>
+          <h2>Demo Components Interaction</h2>
         </div>
       </div>
       <div class="row white">
         <div class="col-sm-4 py-4">
-          <h3>09 <br>customerDetail 选择客户</h3>
+          <h3>01 <br>
+            Use service <br>
+            Angular douments example</h3>
         </div>
         <div class="col-sm-8 py-4 leftBorder">
           <ul>
-            <li>在 productDetail 里导入 output, EventEmitter  </li>
-            <li>在 productDetail 里定义 output shift </li>
-            <li>在 productDetail 里定义 left, right click</li>
-            <li>在 productDetail 里绑定 left, right click 到按钮</li>
-            <li>在 productList 里接收 productDetail 的 shift</li>
-            <li>在 productList 里根据接收的 index 选择 customer</li>
+            <li><a href="/steps/01/01-01.txt" target="_blank">创建 service</a></li>
+            <li><a href="/steps/01/01-02.txt" target="_blank">定义 service</a></li>
           </ul>
         </div>
       </div>
