--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
             Angular douments example</h3>
         </div>
         <div class="col-sm-8 py-4 leftBorder">
+          <p>定义任务列表，每次点击按钮，在 history 里 announce 一个任务。可以自动归零。</p>
+          <!--
           <ul>
             <li><a href="/steps/01/01-01.txt" target="_blank">创建 service</a></li>
             <li><a href="/steps/01/01-02.txt" target="_blank">定义 service</a></li>
+            <li><a href="/steps/01/01-02.txt" target="_blank">创建 missionControl component</a></li>
           </ul>
+        -->
         </div>
       </div>
     </div>
