binding name working

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
       </div>
       <div class="row white">
         <div class="col-sm-4 py-4">
-          <h3>01 <br>
-            Use service <br>
+          <h3>Use service <br>
             Angular douments example</h3>
+            <ul>
+              <li>点击按钮，从任务列表取任务，发布给下面的宇航员列表</li>
+              <li>宇航员列表中，可以确认每个宇航员是否接受任务，一旦接受无法更改</li>
+              <li>History 列表记录所有操作</li>
+          </ul>
         </div>
         <div class="col-sm-8 py-4 leftBorder">
           <ul>
@@ -44,6 +48,17 @@
             <li>加入 missionControl 到 appComponent</li>
             <li><a href="/steps/01/01-03.txt" target="_blank">missionControl TS</a></li>
             <li><a href="/steps/01/01-04.txt" target="_blank">missionControl HTML</a></li>
+            <li><a href="/steps/01/01-05.txt" target="_blank">创建 astronaut</a></li>
+            <li>加入 astronaut 到 missionControl</li>
+            <li><a href="/steps/01/01-06.txt" target="_blank">astronaut 加入 html</a></li>
+            <li>从 missionControl 绑定 astronautName 到 astronaut
+              <ul>
+                <li><a href="/steps/01/01-07.txt" target="_blank">在 missionControl 中根据astronaut 数量 loop astronaut component</a></li>
+                <li><a href="/steps/01/01-08.txt" target="_blank">astronaut 设置 input  </a></li>
+                <li><a href="/steps/01/01-09.txt" target="_blank">在 missionControl 里向astronaut 绑定 astronaut  </a></li>
+                <li><a href="/steps/01/01-10.txt" target="_blank">在 astronaut 中显示 astronautName  </a></li>
+              </ul>
+              </li>
           </ul>
         </div>
       </div>
