--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
                 <li><a href="/steps/01/01-09.txt" target="_blank">在 missionControl 里向astronaut 绑定 astronaut  </a></li>
                 <li><a href="/steps/01/01-10.txt" target="_blank">在 astronaut 中显示 astronautName  </a></li>
               </ul>
+              <li><a href="/steps/01/01-11.txt" target="_blank">创建 missionService</a></li>
               </li>
-          </ul>
+              <li>使用 service Announce missionContro
+                
+              </li>
+            </ul>
         </div>
       </div>
     </div>
