--- a/index.html
+++ b/index.html
@@ -60,14 +60,40 @@
               </ul>
               <li><a href="/steps/01/01-11.txt" target="_blank">创建 missionService</a></li>
               </li>
-              <li>使用 service Announce missionContro
+              <li>使用 service Announce mission
                 <ul>
                     <li><a href="/steps/01/01-12.txt" target="_blank">导入 subject</a></li>
                     <li><a href="/steps/01/01-13.txt" target="_blank">定义 Observable string sources, Observable string streams, method</a></li>
                     <li><a href="/steps/01/01-14.txt" target="_blank">在 missionControl 里通过 service 发送 mission</a></li>
                     <li><a href="/steps/01/01-15.txt" target="_blank">在 astronaut 里通过 service 就收 mission</a></li>
                     <li><a href="/steps/01/01-16.txt" target="_blank">在 astronaut 里显示 mission</a></li>
-              </li>    
+                </ul>
+              </li>
+              <li>
+                使用 service Confirm mission
+                <ul>
+                  <li>
+                      <a href="/steps/01/01-17.txt" target="_blank">
+                      定义 Observable string sources, Observable string streams, method
+                      </a>
+                  </li>
+                  <li>
+                    <a href="/steps/01/01-18.txt" target="_blank">
+                    在 astronaut 里设置 default setting
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/steps/01/01-19.txt" target="_blank">
+                    在 astronaut 里发送 confirm
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/steps/01/01-20.txt" target="_blank">
+                    在 missionControl 里接收 confirm, update history
+                    </a>
+                  </li>
+                </ul>
+              </li>
             </ul>
                 
                 
