--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
           <h2>Demo Components Interaction</h2>
         </div>
       </div>
+      
+      <!---->
+      <div class="row grey">
+          <div class="col-sm-4 py-4">
+            <h3>Use service <br>
+              My example</h3>
+              <p>两个 component, 在一个 component 中点击按钮，通过 service 发送 object 到另一个 component</p>
+            </ul>
+          </div>
+          <div class="col-sm-8 py-4 leftBorder">
+            <ul>
+              <li><a href="/steps/01/01-01.html" target="_blank">HTML mockup, 说明</a></li>  
+            </ul>
+            创建 component1
+            创建 component2
+            创建 service
+            在 service 里定义 Observable string sources, Observable string streams, method
+            在 component1 里点击按钮，发送 object
+            在 component2 里接收 object，trace
+          </div>
+        </div>
+      
+
+      <!---->
       <div class="row white">
         <div class="col-sm-4 py-4">
           <h3>Use service <br>
