--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
           </div>
           <div class="col-sm-8 py-4 leftBorder">
             <ul>
-              <li><a href="/steps/01/01-01.html" target="_blank">HTML mockup, 说明</a></li>  
+              <li><a href="/steps/02/02-01.txt" target="_blank">创建 sender component</a></li>
+              <li><a href="/steps/02/02-02.txt" target="_blank">创建 receiver component</a></li>
             </ul>
-            创建 component1
-            创建 component2
             创建 service
             在 service 里定义 Observable string sources, Observable string streams, method
             在 component1 里点击按钮，发送 object
