--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <ul>
               <li><a href="/steps/02/02-01.txt" target="_blank">创建 sender component</a></li>
               <li><a href="/steps/02/02-02.txt" target="_blank">创建 receiver component</a></li>
+              <li><a href="/steps/02/02-03.txt" target="_blank">创建 service</a></li>
             </ul>
-            创建 service
             在 service 里定义 Observable string sources, Observable string streams, method
             在 component1 里点击按钮，发送 object
             在 component2 里接收 object，trace
