--- a/steps/02/index.html
+++ b/steps/02/index.html
@@ -25,55 +25,26 @@
     <div class="container-fluid">
       <!-- heading  -->
       <div class="row sticky-top white py-2">
-        <div class="col-sm-12">
-          <h1>Components Interaction</h2>
+        <div class="col-sm-8">
+          <h2>Component 使用 service 传递数据</h2>
         </div>
       </div>
       
       <!---->
       <div class="row grey">
-          <div class="col-sm-12 py-4">
-            <h2>componant 传数据到另一个 componant</h2>
+          <div class="col-sm-8 py-4 leftBorder">
             <ul>
-              <li><h4>parent/child</h4></li>
-              <li>
-                <h4>no parent/child</h4>
-                <ul>
-                  <li>
-                    <a href="/steps/01/" target="_blank">
-                      <h5>Angular document example</h5>
-                      <ul>
-                        <li>点击按钮，从任务列表取任务，发布给下面的宇航员列表</li>
-                        <li>宇航员列表中，可以确认每个宇航员是否接受任务，一旦接受无法更改</li>
-                        <li>History 列表记录所有操作</li>
-                      </ul>
-                    </a>
-                  </li>
-                  <li>
-                      <a href="/steps/02/" target="_blank">
-                        <h5>My example</h5>
-                        <ul>
-                          <li>两个 component, 在一个 component 中点击按钮，通过 service 发送 object 到另一个 component</li>
-                        </ul>
-                      </a>
-                    </li>
-                </ul>
-              </li>
+              <li><a href="/steps/02/02-01.txt" target="_blank">创建 sender component</a></li>
+              <li><a href="/steps/02/02-02.txt" target="_blank">创建 receiver component</a></li>
+              <li><a href="/steps/02/02-03.txt" target="_blank">创建 service</a></li>
+              <li><a href="/steps/02/02-04.txt" target="_blank">在 service 里定义 Observable string sources, Observable string streams, method</a></li>
+              <li><a href="/steps/02/02-05.txt" target="_blank">导入 service 到 appModal</a></li>
+              <li><a href="/steps/02/02-06.txt" target="_blank">在 sender 里点击按钮，发送 message</a></li>
+              <li><a href="/steps/02/02-07.txt" target="_blank">在 receiver 里接收 message</a></li>
             </ul>
           </div>
         </div>
       
-
-      <!---->
-      <div class="row white">
-        <div class="col-sm-12 py-4">
-          <h2>componant 调用另一个 componant 的 method </h2>
-          <ul>
-              <li><h4>parent/child</h4></li>
-              <li><h4>no parent/child</h4></li>
-            </ul>
-        </div>
-      </div>
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
