one more example

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                       <a href="/steps/02/" target="_blank">
                         <h5>My example</h5>
                         <ul>
-                          <li>两个 component, 在一个 component 中点击按钮，通过 service 发送 object 到另一个 component</li>
+                          <li>在一个 component 中点击按钮，通过 service 发送 object 到另一个 component</li>
                         </ul>
                       </a>
                     </li>
@@ -70,7 +70,19 @@
           <h2>componant 调用另一个 componant 的 method </h2>
           <ul>
               <li><h4>parent/child</h4></li>
-              <li><h4>no parent/child</h4></li>
+              <li><h4>no parent/child</h4>
+                <ul>
+                  <li>
+                      <a href="/steps/03/" target="_blank">
+                        <h5>My example</h5>
+                        <ul>
+                          <li>在一个 component 中点击按钮，通过 service 调用另一个 component 里的 method</li>
+                          <li>需要再调用 method 时传数据，参考传数据 example. 实际上两种写法是一样的，都通过观察 service 里 string 的改变实现。</li>
+                        </ul>
+                      </a>
+                    </li>
+                </ul>
+              </li>
             </ul>
         </div>
       </div>
