--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
           <div class="col-sm-12 py-4">
             <h2>componant 传数据到另一个 componant</h2>
             <ul>
-              <li><h4>parent/child</h4></li>
+              <li>
+                <h4>parent/child</h4>
+                <ul>
+                  <li>
+                    <a href="/steps/04/" target="_blank">
+                      <h5>从 parent 向 child 传数据，使用 input</h5>
+                      <ul>
+                        <li>Child 使用 input 从 parent 接收 object 并显示</li>
+                      </ul>
+                    </a>
+                  </li>
+                </ul>
+              </li>
               <li>
                 <h4>no parent/child</h4>
                 <ul>
