add new example

--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
                 <ul>
                   <li>
                     <a href="/steps/04/" target="_blank">
-                      <h5>从 parent 向 child 传数据，使用 input</h5>
+                      <h5>从 parent 使用 input 向 child 传数据</h5>
                       <ul>
                         <li>Child 使用 input 从 parent 接收 object 并显示</li>
                       </ul>
                     </a>
                   </li>
+                  <li>
+                      <a href="/steps/05/" target="_blank">
+                        <h5>从 parent 使用 input 向 child 传数据，结合 Getter/Setter</h5>
+                        <ul>
+                          <li>Child 接收数据后，用 Getter/Setter 做初始化处理。</li>
+                        </ul>
+                      </a>
+                    </li>
                 </ul>
               </li>
               <li>
