--- a/steps/05/index.html
+++ b/steps/05/index.html
@@ -34,15 +34,16 @@
       <div class="row grey">
           <div class="col-sm-8 py-4 leftBorder">
             <ul>
-              <li><a href="/steps/04/04-01.txt" target="_blank">创建 parent component</a></li>
-              <li><a href="/steps/04/04-02.txt" target="_blank">创建 child component</a></li>
+              <li><a href="/steps/05/05-01.txt" target="_blank">创建 parent component</a></li>
+              <li><a href="/steps/05/05-02.txt" target="_blank">创建 child component</a></li>
               <li>加入 parent 到 app component</li>
               <li>加入 child 到 parent</li>
-              <li>在 parent 里定义 nameList</li>
-              <li>在 parent 里用 nameList loop child</li>
-              <li>在 parent 里绑定 name 到 child</li>
-              <li>child 显示 name</li>
-              <li>child 用 getter/setter 初始化 input name</li>
+              <li><a href="/steps/05/05-03.txt" target="_blank">在 parent 里定义 nameList</a></li>
+              <li><a href="/steps/05/05-04.txt" target="_blank">在 parent 里用 nameList loop child</a></li>
+              <li><a href="/steps/05/05-05.txt" target="_blank">在 parent 里绑定 name 到 child</a></li>
+              <li><a href="/steps/05/05-06.txt" target="_blank">在 child 里用 input 接收 name</a></li>
+              <li><a href="/steps/05/05-07.txt" target="_blank">child 显示 name</a></li>
+              <li><a href="/steps/05/05-08.txt" target="_blank">child 用 getter/setter 初始化 input name</a></li>
             </ul>
           </div>
         </div>
